no wrap + minor fix
deleted error

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 
 li {
   font-size: 25px;
+  white-space: nowrap;
 }
 
 ul {
